fixed api + tests
