# openapi.yml
@@ -55,7 +55,7 @@ paths:
                     "opening_hours": 10,
                     "closing_hours": 24,
                     "operator_id": 6,
-                    "average_rating": 3.7
+                    "average_rating": 3.7,
                   },
                   {
                     "id": 5,
@@ -68,8 +68,8 @@ paths:
                     "opening_hours": 20,
                     "closing_hours": 4,
                     "operator_id": 12,
-                    "average_rating": 4.9
-                  }
+                    "average_rating": 4.9,
+                  },
                 ]
       tags:
         - "Restaurant"
@@ -101,6 +101,13 @@ paths:
     post:
       x-openapi-router-controller: microservice.api.tables
       summary: "Register a new table"
+      parameters:
+        - name: operator_id
+          in: query
+          required: true
+          description: The id of the operator
+          schema:
+            $ref: "#/components/schemas/Restaurant/properties/operator_id"
       requestBody:
         required: true
         content:
@@ -124,6 +131,18 @@ paths:
           description: The id of the restaurant
           schema:
             $ref: "#/components/schemas/Restaurant/properties/id"
+        - name: operator_id
+          in: query
+          required: true
+          description: The id of the operator
+          schema:
+            $ref: "#/components/schemas/Restaurant/properties/operator_id"
+        - name: seats
+          in: query
+          required: false
+          description: The minimum seats required
+          schema:
+            $ref: "#/components/schemas/Table/properties/seats"
       responses:
         "200":
           description: "The list of tables associated to a restaurant"
@@ -133,22 +152,14 @@ paths:
                 $ref: "#/components/schemas/Table"
               example:
                 [
-                  {
-                    "id": 5,
-                    "name": "A7",
-                    "seats" : 10
-                  },
-                  {
-                    "id": 1,
-                    "name": "A10",
-                    "seats" : 5
-                  }
+                  { "id": 5, "name": "A7", "seats": 10 },
+                  { "id": 1, "name": "A10", "seats": 5 },
                 ]
         "404":
           description: "Table not found"
       tags:
         - "Table"
-  
+
   /tables/{id}:
     get:
       x-openapi-router-controller: microservice.api.tables
@@ -160,6 +171,12 @@ paths:
           description: The id of the table
           schema:
             $ref: "#/components/schemas/Table/properties/id"
+        - name: operator_id
+          in: query
+          required: true
+          description: The id of the operator
+          schema:
+            $ref: "#/components/schemas/Restaurant/properties/operator_id"
       responses:
         "200":
           description: "The table specified by id"
@@ -167,14 +184,11 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Table"
-              example:
-                {
-                  "id": 5,
-                  "name": "A7",
-                  "seats" : 10
-                }
+              example: { "restaurant_id": 5, "name": "A7", "seats": 10 }
         "404":
           description: "Table not found"
+        "403":
+          description: "Operation forbidden"
       tags:
         - "Table"
     patch:
@@ -188,6 +202,12 @@ paths:
           description: The id of the table
           schema:
             $ref: "#/components/schemas/Table/properties/id"
+        - name: operator_id
+          in: query
+          required: true
+          description: The id of the operator
+          schema:
+            $ref: "#/components/schemas/Restaurant/properties/operator_id"
       requestBody:
         required: true
         content:
@@ -204,6 +224,8 @@ paths:
           description: "Table not found"
         "400":
           description: "A table with the same name already exists"
+        "403":
+          description: "Operation forbidden"
       tags:
         - "Table"
     delete:
@@ -216,11 +238,19 @@ paths:
           description: The id of the table
           schema:
             $ref: "#/components/schemas/Table/properties/id"
+        - name: operator_id
+          in: query
+          required: true
+          description: The id of the operator
+          schema:
+            $ref: "#/components/schemas/Restaurant/properties/operator_id"
       responses:
         "204":
           description: "Table deleted"
         "404":
           description: "Table not found"
+        "403":
+          description: "Operation forbidden"
       tags:
         - "Table"
 
@@ -228,6 +258,13 @@ paths:
     post:
       x-openapi-router-controller: microservice.api.menus
       summary: "Register a new menu"
+      parameters:
+        - name: operator_id
+          in: query
+          required: true
+          description: The id of the operator
+          schema:
+            $ref: "#/components/schemas/Restaurant/properties/operator_id"
       requestBody:
         required: true
         content:
@@ -239,6 +276,8 @@ paths:
           description: "Created"
         "409":
           description: "Already Exist"
+        "403":
+          description: "Operation forbidden"
       tags:
         - "Menu"
 
@@ -303,16 +342,8 @@ paths:
                 $ref: "#/components/schemas/Review"
               example:
                 [
-                  {
-                    "id": 5,
-                    "message": "Fantastic",
-                    "rating": 4,
-                  },
-                  {
-                    "id": 7,
-                    "message": "Super",
-                    "lat": 5,
-                  }
+                  { "id": 5, "message": "Fantastic", "rating": 4 },
+                  { "id": 7, "message": "Super", "lat": 5 },
                 ]
       tags:
         - "Review"
@@ -376,7 +407,7 @@ components:
           items:
             type: string
           description: "List of precautions"
-          example: ["Hands sanitizer", "Social distancing"]
+          example: ["Amuchina", "Social distancing"]
     Table:
       type: object
       properties:
@@ -415,7 +446,14 @@ components:
           items:
             type: object
           description: "List of foods"
-          example: [{"category": "STARTERS", "name": "Pepperoni pizza", "price": 5.60}]
+          example:
+            [
+              {
+                "category": "STARTERS",
+                "name": "Pepperoni pizza",
+                "price": 5.60,
+              },
+            ]
         restaurant_id:
           type: integer
           description: "Id of the restaurant that is associated to the menu"
@@ -426,7 +464,17 @@ components:
         category:
           type: string
           description: "Food category"
-          enum: ["STARTERS", "MAIN_COURSES", "SIDE_DISHES", "DESSERTS", "DRINKS", "PIZZAS", "BURGERS", "SANDWICHES"]
+          enum:
+            [
+              "STARTERS",
+              "MAIN_COURSES",
+              "SIDE_DISHES",
+              "DESSERTS",
+              "DRINKS",
+              "PIZZAS",
+              "BURGERS",
+              "SANDWICHES",
+            ]
         name:
           type: string
           description: "Name of the food"
